--- a/index.html
+++ b/index.html
@@ -51,11 +51,11 @@
                   <input type="number" min="0" class="form-control mb-2 mr-sm-2" placeholder="Carbs">
               </div>
               <div class="col">
-                  <input type="number" min="0" class="form-control mb-2 mr-sm-2" placeholder="Protein">
+                <input type="number" min="0" class="form-control mb-2 mr-sm-2" placeholder="Protein">
               </div>
               <div class="col">
-                  <button class="btn btn-primary mb-2">
-                    <i class="fas fa-plus"></i>
+                  <button class="btn btn-primary mb-2" onclick="validate()">
+                    +
                   </button>
               </div>
             </div>
@@ -64,7 +64,6 @@
       </div>
     </div>
   </div>
-
   <script src="./js/jquery.3.3.1.min.js"></script>
   <script src="./js/bootstrap.min.js"></script>
   <script src="./js/main.js"></script>
